<resources>
    <string name="app_name">Masalu!牡丹</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_home_string">主頁</string>
    <string name="drawer_map_string">地圖</string>
    <string name="drawer_local_string">地方資訊</string>
    <string name="drawer_sight_string">旅遊景點</string>
    <string name="drawer_like_string">我的收藏</string>
    <string name="drawer_about_string">關於我們</string>

    <string name="village_sinvaudjan_string">牡丹村</string>
    <string name="village_tjaqaciljai_string">石門村</string>
    <string name="village_maljipa_string">東源村</string>
    <string name="village_macaren_string">旭海村</string>
    <string name="village_kuskus_string">高士村</string>
    <string name="village_sedraki_string">四海村</string>
    
    <string name="local_hotel_string">住宿</string>
    <string name="local_food_string">飲食</string>
    <string name="local_commute_string">交通</string>
    <string name="local_emergency_string">緊急</string>

    <string name="search_hint_string">搜尋景點...</string>
    
    <string-array name="author_main">
        <item>程式</item>
        <item>設計</item>
        <item>撰寫</item>
    </string-array>
    <string-array name="author_sub">
        <item>阿貓 阿國</item>
        <item>互動一</item>
        <item>電機一</item>
    </string-array>
</resources>